styles.css
body {
  margin: 0;
  padding: 0;
  background-color: #d5c4a1;
  color: #282828;
  display: grid;
  grid-template-columns: 0.9fr 4fr;
  grid-template-rows: 0.5fr 3fr;
}

img {
  width: 1.5rem;
  margin-right: 10px;
}

.sidebar {
  height: max(100vh, 100%);
  background-color: #b8bb26;
  font-size: 1.5rem;
  font-weight: bold;
  grid-row: span 2;
}

ul {
  margin-top: 75px;
  list-style-type: none;
}

li {
  display: flex;
  align-items: center;
  margin-top: 25px;
}

.misc {
  margin-top: 75px;
}

.logo {
  padding: 20px;
  padding-bottom: 0;
  font-size: 2rem;
  display: flex;
  align-items: center;
}

.logo > .icon {
  width: 3rem;
  margin-right: 15px;
}

header {
  padding: 20px;
  display: grid;
  padding-top: 20px;
  background-color: #ebdbb2;
  box-shadow: 5px 0px 5px #bdae93;
}

main {
  display: grid;
  height: 100%;
  grid-template-columns: repeat(4, 1fr);
  grid-column-start: 2;
  grid-row-start: 2;
  padding-left: 20px;
}

.projects {
  font-size: 1.5rem;
  font-weight: bold;
  margin-right: 50px;
  grid-column: span 3;
  grid-row: span 3;
}

.cards {
  font-size: 1rem;
  font-weight: normal;
  display: grid;
  gap: 50px;
  grid-template-columns: repeat(3, 1fr);
}

.card > .project {
  font-size: 1.2rem;
  font-weight: bold;
}

.card-actions > .icon {
  width: 1.3rem;
}

.announcements {
  font-size: 1.5rem;
  font-weight: bold;
  grid-column-start: 4;
  padding-right: 30px;
}

.notifications {
  font-size: 0.8rem;
  font-weight: normal;
}

.notifications > .title {
  font-size: 1rem;
  font-weight: bold;
}

.trending {
  font-size: 1.5rem;
  font-weight: bold;
}

.trends {
  font-size: 1rem;
  font-weight: normal;
}

.trends > .name > .user {
  font-weight: bold;
}

.trends > .name > .title {
  font-size: 0.8rem;
}

